fix(feature-article): text alignment changed

--- a/blocks/feature-article/feature-article.css
+++ b/blocks/feature-article/feature-article.css
@@ -138,6 +138,6 @@
     font-size: 15px;
     line-height: 1.7;
     margin-top: 12px;
-    text-align: left;
+    text-align: justify;
   }
 }
